# router/user.js
@@ -15,14 +15,19 @@ dotenv.config({ path: '.env' })
 const JWT_SECRET = process.env.JWT_SECRET
 
 
-router.get('/allpost', async (req, res) => {
+router.get('/allpost', auth , async (req, res) => {
     try {
         const allUser = await prisma.post.findMany();
         if (allUser.length === 0) {
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
             res.status(200).json({ "record": [] })
         } else {
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
             res.status(200).json({ "records": allUser })
         }
+
     } catch (error) {
         res.status(500).json({ "msg": "Internal Server Error" })
     }
@@ -30,15 +35,20 @@ router.get('/allpost', async (req, res) => {
 
 
 
-router.get('/alluser', async (req, res) => {
+router.get('/alluser', auth, async (req, res) => {
     try {
         const allUser = await prisma.user.findMany();
         if (allUser.length === 0) {
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
             res.status(200).json({ "record": [] })
         } else {
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
             res.status(200).json({ "records": allUser })
         }
     } catch (error) {
+        console.log(error);
         res.status(500).json({ "msg": "Internal Server Error" })
     }
 });
@@ -82,9 +92,13 @@ router.post('/create-post', auth, async (req, res) => {
         const authorId = decodeToken.id;
         const post = await prisma.post.create({ data: { title, content, authorId } })
         if (post) {
-            res.status(201).json({ "record": {"post" : post} , "success" : true });
-        }else{
-            res.status(404).json({"record" : {"post" : [] , "success" : false}})
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
+            res.status(201).json({ "record": { "post": post }, "success": true });
+        } else {
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
+            res.status(404).json({ "record": { "post": [], "success": false } })
         }
     } catch (error) {
         res.status(500).json({ "msg": "Internal Server Error" })
@@ -97,38 +111,46 @@ router.post('/create-post', auth, async (req, res) => {
 router.post('/create-comment', auth, async (req, res) => {
     try {
         const { error } = commentvalidation(req.body);
-    if (error) {
-        res.status(404).json({ 'error': error.details[0].message });
-        return;
-    }
-    const { content, postId } = req.body;
-    const token = req.header('x-auth-token');
-    const decodeToken = jwt.verify(token, JWT_SECRET);
-    const authorId = decodeToken.id;
-    const comment = await prisma.comment.create({ data: { content, postId, authorId } });
-    if (comment) {
-        res.status(201).json({ 'data': {"comment" : comment} , "success" : true });
-    }else{
-        res.status(404).json({ 'data': {"comment" : ""} , "success" : false });
-    }
+        if (error) {
+            res.status(404).json({ 'error': error.details[0].message });
+            return;
+        }
+        const { content, postId } = req.body;
+        const token = req.header('x-auth-token');
+        const decodeToken = jwt.verify(token, JWT_SECRET);
+        const authorId = decodeToken.id;
+        const comment = await prisma.comment.create({ data: { content, postId, authorId } });
+        if (comment) {
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
+            res.status(201).json({ 'data': { "comment": comment }, "success": true });
+        } else {
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
+            res.status(404).json({ 'data': { "comment": "" }, "success": false });
+        }
     } catch (error) {
-        console.log("error" , error);
+        console.log("error", error);
         res.status(500).json({ "msg": "Internal Server Error" })
     }
 })
 
 
 
-router.delete('/delete-post', async (req, res) => {
+router.delete('/delete-post', auth , async (req, res) => {
     try {
         const postId = req.body.id;
         await prisma.comment.deleteMany({ where: { postId } });
         const deletepost = await prisma.post.delete({ where: { id: postId } });
 
         if (deletepost !== null) {
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
             return res.status(202).json({ 'msg': "post deleted", "success": true });
         } else {
-            return res.status(404).json({ 'msg': "can't delete this one" , "success" : false })
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
+            return res.status(404).json({ 'msg': "can't delete this one", "success": false })
         }
 
     } catch (error) {
@@ -138,14 +160,18 @@ router.delete('/delete-post', async (req, res) => {
 
 
 
-router.get('/user/:id', async (req, res) => {
+router.get('/user/:id', auth , async (req, res) => {
     try {
         const userId = req.params.id;
         const result = await prisma.user.findUnique({ where: { id: parseInt(userId) } });
         if (!result) {
-            res.status(200).json({ "record": {"user" : []  , "msg" : `there is no user with this ID ${userId}`} , "success" : false });
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
+            res.status(200).json({ "record": { "user": [], "msg": `there is no user with this ID ${userId}` }, "success": false });
         } else {
-            res.status(200).json({ "record": {"user" : result} , "success" : true });
+            const token = jwt.sign({ id: req.user.id, isAdmin: req.user.isAdmin }, JWT_SECRET);
+            res.header('x-auth-togenerationToken', token)
+            res.status(200).json({ "record": { "user": result }, "success": true });
         }
     } catch (error) {
         res.status(500).json({ "msg": "Internal Server Error" })
